Bug 1883282 - Use PromiseFlatCString to null-terminate log. r=necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D203549